--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 * {
     margin: 0;
     padding: 0;
@@ -111,17 +111,28 @@ section
 }
 .git a{
     color: cyan;
-    font-size: 15px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     padding-top:0.5rem;
 }
+.codepen a {
+    color: #fff;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    padding-top:0.5rem;
+    padding-bottom: 0.5rem;
+
+}
 .contact{
     color: cyan;
     font-size: 15px;
-    display: flex;
-    justify-content: center;
+    display: flex !important;
+    justify-content: center !important;
     padding-bottom:1.5rem;
+    
+    
 }
 .bio{
     text-align: center;
@@ -136,22 +147,24 @@ section
     height:50px;
     position:relative;
     z-index:5;
-    font-family:'pacifico', Arial,sans-serif ;
-    display: flex;
-    justify-content: center;
+    font-family:'montserrat', Arial,sans-serif ;
+    display: flex !important;
+    justify-content: center !important;
     text-decoration: underline;
+    padding-bottom: 2rem;
+    margin-top: 2rem;
 
 }
 .projects{
-    color:#ffffff;
+    color:#df6868;
     display:block;
     font: 14px/1.3;
     height:50px;
     z-index:5;
     position:relative;
     font-family:'Montserrat', Arial,sans-serif ;
-    display: flex;
-    justify-content: center;
+    display: flex !important;
+    justify-content: center !important;
     font-size: 20px;
 
 }
@@ -167,11 +180,11 @@ section
     padding: 1.0rem;
 }
 
-.website-one, .website-two,.behance {
+.website-one,.pizza, .behance{
     animation: moveTwo 10s infinite;
     animation-direction: alternate;
 }
-.calculator,  .pizza,.weather-app {
+.calculator, .website-two,.weather-app{
     animation: moveOne 10s infinite;
     animation-direction: alternate;
 
@@ -179,7 +192,7 @@ section
 
 @keyframes moveTwo{
     from{ color:blue;
-         transform: translateY(150px);
+         transform: translateY(100px);
         }
     to{  color:white;
          transform: translateY(0);
@@ -187,6 +200,103 @@ section
 }
 @keyframes moveOne{
     from{ color:blue; transform: translateY(0px);}
-    to{  color:white; transform: translateY(150px);}
+    to{  color:white; transform: translateY(100px);}
 }
+
+/* ============================================================================================== 
+mobile section
+================================================================================================= */
+/*
+@media screen and (max-width:480px) {
+    .project {
+        padding-top: 4rem;
+    }
+}*/
+
+.mobileShow {
+    display: none;
+}
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+  and (min-device-width : 320px)
+  and (max-device-width : 480px){ 
+      .mobileShow {
+        display: inline;
+        color:#ffffff;
+        font: 14px/1.3;
+        height:50px;
+        z-index:5;
+        position:relative;
+        font-family:'Montserrat', Arial,sans-serif ;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+
+    }
+    .portLink {
+        
+        color: cyan;
+        margin-bottom: 5rem;
+    }
+    .portLink a{
+        color: cyan;
+        text-decoration: none !important;
+        margin-bottom: 5rem;
+
+    }
+    li::marker {
+        content: attr(data-emoji);
+      }
+      li:hover::marker {
+        content: "🤯";
+      }
+
+
+
+      @keyframes moveLeft{
+        from{ 
+             transform: translateX(110px);
+            }
+        to{  
+             transform: translateX(0);
+            }
+    }
+        @keyframes moveRight{
+            from{ transform: translateX(0px);}
+            to{  transform: translateX(150px);}
+        }
+        
+        .port1, .port3, .port5{
+            animation: moveLeft 10s infinite;
+            animation-direction: alternate;
+            color: cyan !important;
+            text-decoration: none !important;
+            margin-bottom: 5rem;
+        }
+     
+     .port2, .port4, .port6   {
+            color: cyan;
+            text-decoration: none !important;
+            margin-bottom: 5rem;
+            animation: moveRight 10s infinite;
+            animation-direction: alternate;
+        
+        }
+        .port2 a, .port4 a, .port6 a,   .port1 a, .port3 a, .port5 a{
+            color: cyan;
+            text-decoration: none !important;
+
+        }
+}
+
+
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){
+     .mobileHide { display: none !important;
+    }
+  }
 
