--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -234,6 +235,11 @@ mobile section
         font-size: 20px;
 
     }
+    
+      .git a,.codepen a{
+        font: 14px/1.3;
+        padding-bottom: 1.5rem;
+    }
     .portLink {
         
         color: cyan;
@@ -247,6 +253,7 @@ mobile section
     }
     li::marker {
         content: attr(data-emoji);
+        padding: 0.8rem;
       }
       li:hover::marker {
         content: "🤯";
@@ -286,6 +293,7 @@ mobile section
         .port2 a, .port4 a, .port6 a,   .port1 a, .port3 a, .port5 a{
             color: cyan;
             text-decoration: none !important;
+            font-size: 20px;
 
         }
 }
