--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ mobile section
     }
     
       .git a,.codepen a{
-        font: 14px/1.3;
+        font:29px !important;
         padding-bottom: 1.5rem;
     }
     .portLink {
@@ -293,7 +293,7 @@ mobile section
         .port2 a, .port4 a, .port6 a,   .port1 a, .port3 a, .port5 a{
             color: cyan;
             text-decoration: none !important;
-            font-size: 20px;
+            font-size: 27px !important;
 
         }
 }
